# fastapi_ai_photo

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  readme.md
nbs/: 1-image-dataset-zip-file.ipynb  2-validate-images-zip.ipynb  3-optimize-images-zip.ipynb  4-generate-images.ipynb  5-generate-images-with-reference.ipynb  6-trigger-background-generation.ipynb  app-1-proxy-generate-image.ipynb  app-2-test-api-rate-limiter.ipynb
src/: main.py
src/helpers/: __init__.py  _replicate.py
