[tool.poetry]
name = "fastapi-ai-photo"
version = "0.1.0"
description = ""
authors = ["updaun <updauney@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
pillow-heif = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
