[tool.poetry]
name = "fastapi-ai-photo"
version = "0.1.0"
description = ""
authors = ["updaun <updauney@daum.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^4.0.1"
pillow-heif = "^0.21.0"
python-decouple = "^3.8"
replicate = "^1.0.4"
fastapi = {extras = ["standard"], version = "^0.115.6"}
uvicorn = "^0.34.0"
fastapi-limiter = "^0.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
